--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email:</label>
-                    <input type="email" name="Email" class="form-control" id="email">
+                    <input type="email" name="Email" class="form-control" id="email" placeholder="email@email.com">
                 </div>
                 <div class="mb-3">
                     <label for="telefono" class="form-label">Teléfono:</label>
