--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -41,7 +41,7 @@
                     <textarea name="Comentario" name="Nombre" class="form-control" id="comentario" rows="3"></textarea>
                 </div>
                 
-                <button type="submit" class="btn btn-dark">Submit</button>
+                <button type="submit" class="btn btn-dark">Subir</button>
               </form>
 
 
