--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,6 +9,16 @@
     
 </head>
 <body>
+    <header>
+
+    </header>
+    <main>
+        <h1>MINDY</h1>
+    </main>
+    <footer>
+
+    </footer>
+    <script src="/JS/toDisplay.js"></script>
     <script src="/JS/master.js"></script>
 </body>
 </html>
