--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header></header>
-    <main class="d-flex justify-content-center align-items-center">
+    <main class="d-flex justify-content-around align-items-center flex-wrap">
         <div class="d-flex justify-content-center align-content-center my-5 formulario">
             <form>
                 <div class="mb-3">
@@ -27,7 +27,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="telefono" class="form-label">Teléfono:</label>
-                    <input type="text" name="Telefono" class="form-control" id="telefono">
+                    <input type="number" name="Telefono" class="form-control" id="telefono">
                 </div>
                 <div class="mb-3 ">
                     <p>Seleccione mascota:</p>
@@ -47,14 +47,14 @@
 
         </div>
 
-        <div class="d-flex">
+        <div>
             <div>
-                <p>Visítanos</p>
+                <p>Visítanos en Rio de Janeiro 300, Caballito, CABA:</p>
 
             </div>
             
             <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.6869258109564!2d-58.43257238440446!3d-34.61207738045731!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca429815227f%3A0x5d302e497c2cda87!2sR%C3%ADo%20de%20Janeiro%20300%2C%20C1405CCB%20CABA!5e0!3m2!1ses!2sar!4v1653943387484!5m2!1ses!2sar" width="300" height="300" style="border:0;"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.6869258109564!2d-58.43257238440446!3d-34.61207738045731!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca429815227f%3A0x5d302e497c2cda87!2sR%C3%ADo%20de%20Janeiro%20300%2C%20C1405CCB%20CABA!5e0!3m2!1ses!2sar!4v1653943387484!5m2!1ses!2sar" width="400" height="400" style="border:0;"></iframe>
             </div>
         </div>
         
