--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -49,7 +49,58 @@
         </div>
     </header>
 
-    <main class="container">
+    <main class="d-flex justify-content-center align-items-center flex-wrap">
+        <div class="contacto my-5 formulario ml-5">
+            <form>
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre:</label>
+                    <input type="text" name="Nombre" class="form-control" id="nombre">
+                </div>
+                <div class="mb-3">
+                    <label for="apellido" class="form-label">Apellido:</label>
+                    <input type="text" name="Apellido" class="form-control" id="apellido">
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email:</label>
+                    <input type="email" name="Email" class="form-control" id="email" placeholder="email@email.com">
+                </div>
+                <div class="mb-3">
+                    <label for="telefono" class="form-label">Teléfono:</label>
+                    <input type="number" name="Telefono" class="form-control" id="telefono">
+                </div>
+                <div class="mb-3 ">
+                    <p>Seleccione mascota:</p>
+                    <label><input class="form-check-input" type="checkbox" name=Mascota value="Perro">Perro</label>
+                    <label><input class="form-check-input" type="checkbox" name=Mascota value="Gato">Gato</label>
+
+                </div>
+
+                <div class="mb-3">
+                    <label for="comentario" class="form-label">Comentarios:</label>
+                    <textarea name="Comentarios" class="form-control" id="comentario" rows="3"></textarea>
+                </div>
+
+                <button type="submit" class="btn btn-dark">Subir</button>
+            </form>
+
+
+        </div>
+
+        <div>
+            <div>
+                <p>Visítanos en Rio de Janeiro 300, Caballito, CABA:</p>
+
+            </div>
+
+            <div>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.6869258109564!2d-58.43257238440446!3d-34.61207738045731!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca429815227f%3A0x5d302e497c2cda87!2sR%C3%ADo%20de%20Janeiro%20300%2C%20C1405CCB%20CABA!5e0!3m2!1ses!2sar!4v1653943387484!5m2!1ses!2sar"
+                    width="600" height="440" style="border:0;"></iframe>
+            </div>
+        </div>
+
+
+
 
     </main>
 
@@ -86,10 +137,9 @@
 
 
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
-    <script src="/JS/master.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="/JS/contacto.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" ></script>
 
 </body>
 
