--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,6 +9,11 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="/CSS/styles.css">
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Karla:wght@200&family=Pacifico&family=Permanent+Marker&family=Slabo+40px&family=Titan+One&family=Yanone+Kaffeesatz:wght@600&display=swap"
+        rel="stylesheet">
     <title>Mindy-Home</title>
 </head>
 
@@ -18,7 +23,11 @@
         <div>
             <nav class="navbar navbar-expand-lg rounded sticky-top" aria-label="Twelfth navbar example">
                 <div class="container-fluid">
-                    <img class="logoTop" src="/assets/logo_white_large.png" alt="">
+                    <div>
+                        <a href="#" target="_blank" class="footericons"></a>
+                        <img class="logoTop" src="/assets/logo_white_large.png" alt="">
+                    </div>
+
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -48,10 +57,57 @@
     </header>
 
     <main class="container">
-
+        <div>
+        <h1>MINDY</h1>
+        <h2>"Bienvenidos a nuestra tienda"</h2>
+        <h3>Echa un vistazo a nuestra pagina. ¡ Es genial tenerte aquí !</h3>
+    </div>
+        <div id="carouselExampleCaptions" class="carousel slide mt-5" data-bs-ride="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/ASSETS/gatito_y_perro.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/ASSETS/Perrito.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/ASSETS/gatito.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </main>
 
-    <footer class="sticky-bottom mt-auto py-2 bg-light footer">
+    <footer class="sticky-bottom mt-auto py-2 footer">
         <div class="container-fluid row align-items-center justify-content-center d-flex flex-wrap rowfooter">
             <div class="col-sm-6 mb-1 mt-1">
                 <a href="#" target="_blank" class="footericons">
