--- a/HTML/juguetes.html
+++ b/HTML/juguetes.html
@@ -46,8 +46,11 @@
         </div>
     </header>
 
-    <main class="container">
+    <main>
+		<div class="cards row col-8 conteiner-fluid  d-flex justify-content-center  mt-5 gap-5">
 
+		</div>
+		<div class="row row-cols-1 row-cols-md-3 g-4"> </div>
     </main>
 
     <footer class="sticky-bottom mt-auto py-2 bg-light footer">
@@ -85,7 +88,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
-    <script src="/JS/master.js"></script>
+    <script src="/JS/juguetes.js"></script>
 </body>
 
 </html>
