--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -8,8 +8,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="/CSS/styles.css">
-    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="shortcut icon" href="../ASSETS/favicon.ico" type="image/x-icon">
     <title>Mindy-Contacto</title>
 
 </head>
@@ -138,7 +138,7 @@
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="/JS/contacto.js"></script>
+    <script src="../JS/contacto.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" ></script>
 
 </body>
