--- a/HTML/farmacia.html
+++ b/HTML/farmacia.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="/CSS/styles.css">
-    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="shortcut icon" href="../ASSETS/favicon.ico" type="image/x-icon">
     <title>Mindy-Farmacia</title>
 </head>
 
@@ -47,7 +47,7 @@
     </header>
 
     <main>
-        <div class="container mt-2">
+		<div class="container mt-2">
 			<div class="row">
 				<div class="col-lg-4">
 					<select class="form-select" aria-label="Default select example" id="precios">
@@ -66,7 +66,10 @@
 			<div class="cards row justify-content-center my-5">
 				
 			</div>
-    </main>
+			
+		</div>
+	</main>
+	
 
     <footer class="sticky-bottom mt-auto py-2 bg-light footer">
         <div class="container-fluid row align-items-center justify-content-center d-flex flex-wrap rowfooter">
@@ -101,10 +104,9 @@
 
 
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
-    <script src="/JS/farmacia.js"></script>
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="../JS/farmacia.js"></script>
 </body>
 
 </html>
