--- a/HTML/juguetes.html
+++ b/HTML/juguetes.html
@@ -47,10 +47,18 @@
     </header>
 
     <main>
-		<div class="cards row col-8 conteiner-fluid  d-flex justify-content-center  mt-5 gap-5">
+        <!-- Imagen Juguetes-->
+        <div class="imagen-gatito">
+        <h4>Juguetes</h4>
+        </div>
+        
+        <!-- -->
+        <!-- Tarjetas Juguete -->
 
-		</div>
-		<div class="row row-cols-1 row-cols-md-3 g-4"> </div>
+        <div class="cards row col-12 conteiner-fluid  d-flex justify-content-center  mt-5 gap-5">
+
+        </div>
+        
     </main>
 
     <footer class="sticky-bottom mt-auto py-2 bg-light footer">
