--- a/HTML/index.html
+++ b/HTML/index.html
@@ -62,7 +62,7 @@
         <h2>"Bienvenidos a nuestra tienda"</h2>
         <h3>Echa un vistazo a nuestra pagina. ¡ Es genial tenerte aquí !</h3>
     </div>
-        <div id="carouselExampleCaptions" class="carousel slide mt-5" data-bs-ride="false">
+        <div id="carouselExampleCaptions">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
