--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -98,10 +98,12 @@
                     width="600" height="440" style="border:0;"></iframe>
             </div>
         </div>
-
-
-
-
+		<a href="./carrito.html" class="car-button d-flex align-items-center text-white">
+			<svg xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
+				<path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+			</svg>
+			<p id="cantidad-productos"></p>
+		</a>
     </main>
 
     <footer class="sticky-bottom mt-auto py-2 bg-light footer">
@@ -139,6 +141,7 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="../JS/contacto.js"></script>
+	<script src="../JS/botonCarrito.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" ></script>
 
 </body>
