--- a/HTML/farmacia.html
+++ b/HTML/farmacia.html
@@ -68,6 +68,12 @@
 			</div>
 			
 		</div>
+		<a href="./carrito.html" class="car-button d-flex align-items-center text-white">
+			<svg xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
+				<path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+			</svg>
+			<p id="cantidad-productos">0</p>
+		</a>
 	</main>
 	
 
@@ -106,7 +112,9 @@
     <!-- JavaScript Bundle with Popper -->
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="../JS/farmacia.js"></script>
+	<script src="../JS/botonCarrito.js"></script>
+	<script src="../JS/farmacia.js"></script>
+
 </body>
 
 </html>
