--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,7 +25,7 @@
                 <div class="container-fluid">
                     <div>
                         <a href="#" target="_blank" class="footericons"></a>
-                        <img class="logoTop" src="/assets/logo_white_large.png" alt="">
+                        <img class="logoTop" src="../assets/logo_white_large.png" alt="">
                     </div>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -73,21 +73,21 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/ASSETS/gatito_y_perro.jpg" class="d-block w-100" alt="...">
+                    <img src="../ASSETS/gatito_y_perro.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Some representative placeholder content for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/ASSETS/Perrito.jpg" class="d-block w-100" alt="...">
+                    <img src="../ASSETS/Perrito.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
                         <p>Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/ASSETS/gatito.jpg" class="d-block w-100" alt="...">
+                    <img src="../ASSETS/gatito.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <p>Some representative placeholder content for the third slide.</p>
@@ -105,6 +105,12 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+		<a href="./carrito.html" class="car-button d-flex align-items-center text-white">
+			<svg xmlns="http://www.w3.org/2000/svg" width="1.2rem" height="1.2rem" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
+				<path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+			</svg>
+			<p id="cantidad-productos"></p>
+		</a>
     </main>
 
     <footer class="sticky-bottom mt-auto py-2 footer">
@@ -142,6 +148,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+	<script src="../JS/botonCarrito.js"></script>
 </body>
 
 </html>
