--- a/HTML/index.html
+++ b/HTML/index.html
@@ -69,21 +69,21 @@
                       <div class="carousel-item active">
                         <img src="../ASSETS/gatito_y_perro.jpg" class="d-block w-100 imagen" alt="imagen gatito y perro">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5 class="presentacion">Somos amantes de los animales.</h5>
+                          <h5 class="presentacion">Somos amantes de los animales</h5>
                           <p class="presentacion">Y estamos comprometidos con su bienestar.</p>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <img src="../ASSETS/perrito.jpg" class="d-block w-100 imagen" alt="imagen perrito">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5 class="presentacion">Por eso les ofrecemos un servicio de farmacia y juguetería.</h5>
+                          <h5 class="presentacion">Por eso les ofrecemos un servicio de farmacia y juguetería</h5>
                           <p class="presentacion">Con altos estándares de calidad.</p>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <img src="../ASSETS/gatito.jpg" class="d-block w-100 imagen" alt="imagen gatito">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5 class="presentacion">Para que aquellos que alegran nuestra vida diariamente.</h5>
+                          <h5 class="presentacion">Para que aquellos que alegran nuestra vida diariamente</h5>
                           <p class="presentacion">Tengan el cuidado y amor que se merecen.</p>
                         </div>
                       </div>
