--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,6 +14,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Karla:wght@200&family=Pacifico&family=Permanent+Marker&family=Slabo+40px&family=Titan+One&family=Yanone+Kaffeesatz:wght@600&display=swap"
         rel="stylesheet">
+
+
     <title>Mindy-Home</title>
 </head>
 
@@ -22,12 +24,8 @@
     <header>
         <div>
             <nav class="navbar navbar-expand-lg rounded sticky-top" aria-label="Twelfth navbar example">
-                <div class="container-fluid">
-                    <div>
-                        <a href="#" target="_blank" class="footericons"></a>
-                        <img class="logoTop" src="/assets/logo_white_large.png" alt="">
-                    </div>
-
+                <div class="container-fluid contBurger">
+                    <img class="logoTop" src="../assets/logo_white_large.png" alt="">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -56,13 +54,14 @@
         </div>
     </header>
 
-    <main class="container">
-        <div>
-        <h1>MINDY</h1>
-        <h2>"Bienvenidos a nuestra tienda"</h2>
-        <h3>Echa un vistazo a nuestra pagina. ¡ Es genial tenerte aquí !</h3>
-    </div>
-        <div id="carouselExampleCaptions">
+    <main class="container-fluid d-flex flex-column align-items-center justify-content-end">
+
+        <div class="d-flex flex-column div1">
+            <h1>Bienvenidos a PETSHOP MINDY</h1>
+            <h2>¡Es genial tenerlos aquí !</h2>
+        </div>
+
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -73,24 +72,24 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/ASSETS/gatito_y_perro.jpg" class="d-block w-100" alt="...">
+                    <img src="../ASSETS/gatito_y_perro.jpg" class="d-block w-100 imagen" alt="imagen gatito y perro">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                        <h5 class="presentacion">Somos amantes de los animales</h5>
+                        <p class="presentacion">Y estamos comprometidos con su bienestar.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/ASSETS/Perrito.jpg" class="d-block w-100" alt="...">
+                    <img src="../ASSETS/perrito.jpg" class="d-block w-100 imagen" alt="imagen perrito">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h5 class="presentacion">Por eso les ofrecemos un servicio de farmacia y juguetería</h5>
+                        <p class="presentacion">Con altos estándares de calidad.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/ASSETS/gatito.jpg" class="d-block w-100" alt="...">
+                    <img src="../ASSETS/gatito.jpg" class="d-block w-100 imagen" alt="imagen gatito">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5 class="presentacion">Para que aquellos que alegran nuestra vida diariamente</h5>
+                        <p class="presentacion">Tengan el cuidado y amor que se merecen.</p>
                     </div>
                 </div>
             </div>
@@ -105,6 +104,14 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+
+        </div>
+
+        <div>
+            <h5>Echen un vistazo a nuestra tienda...</h5>
+        </div>
+
+
     </main>
 
     <footer class="sticky-bottom mt-auto py-2 footer">
