--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -56,8 +56,8 @@
 
     <main class="container-fluid">
 
-        <div class="row d-flex justify-content-center align-items-center flex-wrap">
-            <div class="col-sm-4 contacto mx-5 my-5 formulario justify-content-center align-items-center">
+        <div class="conctacto row d-flex justify-content-center align-items-center flex-wrap">
+            <div class="contactos col-sm-4 contacto mx-5 my-5 formulario justify-content-center align-items-center">
                 <form id="contactForm">
                     <div class="mb-2">
                         <label for="nombre" class="form-label">Nombre:</label>
@@ -108,7 +108,6 @@
             </div>
 
         </div>
-       
 
     </main>
 
