--- a/HTML/carrito.html
+++ b/HTML/carrito.html
@@ -50,7 +50,7 @@
         </div>
     </header>
 	<main>
-		<div class="container">
+		<div class="container carrito-tabla">
 			<table class="table text-light">
 				<thead>
 				<tr>
