--- a/HTML/carrito.html
+++ b/HTML/carrito.html
@@ -1,25 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../ASSETS/favicon.ico" type="image/x-icon">
 
-	<title>Carrito</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-	<link rel="stylesheet" href="../CSS/styles.css">
+    <title>Carrito</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
+
 <body>
 
-	<header>
+    <header>
         <div>
             <nav class="navbar navbar-expand-lg rounded sticky-top" aria-label="Twelfth navbar example">
                 <div class="container-fluid">
                     <div>
                         <a href="#" target="_blank" class="footericons"></a>
-                        <img class="logoTop" src="../assets/logo_white_large.png" alt="">
+                        <a href="../index.html">
+                            <img class="logoTop" src="../assets/logo_white_large.png" alt="">
+                        </a>
                     </div>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -49,27 +53,27 @@
 
         </div>
     </header>
-	<main>
-		<div class="container carrito-tabla">
-			<table class="table text-light">
-				<thead>
-				<tr>
-					<th scope="col">Producto</th>
-					<th scope="col">Tipo</th>
-					<th scope="col">Precio</th>
-					<th scope="col">Cantidad</th>
-				</tr>
-				</thead>
-				<tbody id="tabla-productos">
-				</tbody>
-				<tfoot id="tabla-footer">
-					
-				</tfoot>
-			</table>
-			<div id="liveAlertPlaceholder"></div>
-		</div>
-	</main>
-	<footer class="sticky-bottom mt-auto py-2 footer">
+    <main>
+        <div class="container carrito-tabla">
+            <table class="table text-light">
+                <thead>
+                    <tr>
+                        <th scope="col">Producto</th>
+                        <th scope="col">Tipo</th>
+                        <th scope="col">Precio</th>
+                        <th scope="col">Cantidad</th>
+                    </tr>
+                </thead>
+                <tbody id="tabla-productos">
+                </tbody>
+                <tfoot id="tabla-footer">
+
+                </tfoot>
+            </table>
+            <div id="liveAlertPlaceholder"></div>
+        </div>
+    </main>
+    <footer class="sticky-bottom mt-auto py-2 footer">
         <div class="container-fluid row align-items-center justify-content-center d-flex flex-wrap rowfooter">
             <div class="col-sm-6 mb-1 mt-1">
                 <a href="#" target="_blank" class="footericons">
@@ -99,8 +103,11 @@
             </div>
         </div>
     </footer>
-	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-	<script src="../JS/carrito.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+    <script src="../JS/carrito.js"></script>
 </body>
+
 </html>
