--- a/HTML/farmacia.html
+++ b/HTML/farmacia.html
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-expand-lg rounded sticky-top" aria-label="Twelfth navbar example">
                 <div class="container-fluid">
                     <a href="../index.html">
-                        <img class="logoTop" src="/assets/logo_white_large.png" alt="">
+                        <img class="logoTop" src="../assets/logo_white_large.png" alt="">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false"
